--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/blownawayhvac-08-22/">https://rank-fortress-digital-agency.github.io/blownawayhvac-08-22/</a><br>
-                <a target="_bLank" href="http://blownawayhvac-08-22.s3-website.ap-south-1.amazonaws.com">http://blownawayhvac-08-22.s3-website.ap-south-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://leafy-bienenstitch-603130.netlify.app/">https://leafy-bienenstitch-603130.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/blownawayhvac-09-22/">https://rank-fortress-digital-agency.github.io/blownawayhvac-09-22/</a><br>
+                <a target="_bLank" href="http://blownawayhvac-09-22.s3-website.ap-south-1.amazonaws.com">http://blownawayhvac-09-22.s3-website.ap-south-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://peppy-naiad-77d7e8.netlify.app/">https://peppy-naiad-77d7e8.netlify.app/</a><br>
                 <a target="_bLank" href="https://sites.google.com/view/blownawayhvac/home/">https://sites.google.com/view/blownawayhvac/home</a><br>
             </section>
 
